[project]
name = "roboeyes"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xe111", email = "2073661764@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
